# egorlappo.github.io

./: .gitignore  Bib.hs  CHANGELOG.md  CNAME  Gemfile  README.md  Site.hs  _config.yml  blog.md  citations.csl  index.html  index.markdown  index.md  mysite.cabal  package.yaml  pubs.bib  site.hs  stack.yaml  website-hakyll.cabal
_layouts/: default.html
_posts/: 2022-07-06-welcome-to-jekyll.markdown
css/: blogpost.css  default.css  main.css
dist-newstyle/cache/: compiler  config  elaborated-plan  plan.json  solver-plan  source-hashes
docs/: CNAME  CNAME 3  blog 2.html  blog.html  index 2.html  index.html
docs/css/: blogpost 2.css  blogpost.css  default.css  index 3.css  main.css
docs/posts/: .2022-02-28-extracting-a-coefficient 2.html.icloud  2015-08-23-example.html  2022-02-28-extracting-a-coefficient.html  2022-10-05-publication-list 3.html  2022-10-05-publication-list.html  2022-10-20-gene-trees-species-trees 3.html  2022-10-20-gene-trees-species-trees.html  (+10 more)
posts/: 2015-08-23-example.markdown  2022-02-28-extracting-a-coefficient.md  2022-10-05-publication-list.markdown  2022-10-05-publication-list.md  2022-10-20-gene-trees-species-trees.md  2022-10-21-tree-combinatorics-haskell-part-one.md  2022-11-07-tree_combinatorics-haskell-part-two.md  2023-02-28-extracting-a-coefficient.md  2023-08-12-old-photos.md  2023-08-13-ortho-film.md  2023-08-22-melbourne-trip.md  2023-08-25-new-mamiya.md  2023-08-31-new-mamiya.md  2023-10-11-istanbul-catspotting.md
slides/: 2022-11-chess-x-culture.html  2023-09-folklore.html
templates/: blogpost.html  default.html
(+7 files in other folders)
