name:                website-hakyll
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/EgorLappo/website-hakyll#readme
license:             BSD3
license-file:        LICENSE
author:              Egor Lappo
maintainer:          egor@ccrma.stanford.edu
copyright:           Copyright (c) 2022 Egor Lappo
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10

executable website-hakyll
  main-is:             Site.hs
  other-modules:       Bib
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       text,
                       hakyll,
                       parsec,
                       pandoc,
                       pandoc-types,
                       bibtex
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
